    * check_tcp: Now able to set custom service description
    * Apache ActiveMQ: New Special Agent and Check to query ActiveMQ Queues
    * check_ftp: can now be configured via Wato
    * windows_tasks: New check to  monitor the Windows Task Scheduler
    * sensatronics_temp: New check for Sensatronic E4 Temperatur Sensor
    * akcp_sensor_drycontact: New Check for AKCP drycontact Sensors
    * ps:  new configuration option: handle_count (windows only)
    * FIX: Windows agent: gracefully handle garbled logstate.txt
    * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch
    * FIX: esx_vsphere_hostsystem: fixed bug in handling of params
    * FIX: local: tolerate invalid output lines
    * FIX: hp_proliant: Correct handling of missing snmp data
    * FIX: logwatch.ec: No longer forwards "I" lines to event console
    * FIX: check_dns: default to querying the host itself
    * FIX: ps: do not output perfdata of CPU averaging (use ps.perf for that)
    * FIX: nfsexports: also support systems with rpcbind instead of portmap
    * FIX: ups_in_freq: corrected spelling of service description
    * FIX: ups_bat_temp: renamed service description to "Temperature Battery",
           in order to make it consistent with the other temperature checks
    * FIX: hp_blade_blades: Fixed crash on inventory when receiving
           unexpected snmp data
    * FIX: apache_status: If ReqPerSec and BytesPerSec are not reported by
           the agent, no PNP graphs for them are drawn.
           (This is the case if ExtendedStatus set to Off in Apache config)
    * FIX: oracle_jobs: fixed issues with incorrect column count in check output


    WATO:
    * You can now have site-specific global settings when using
      distributed WATO (available in the "Distributed Monitoring")
    * bulk inventory: display percentage in progress bar
    * New option for full SNMP scan in bulk inventory
    * bulk operations now also available when checkboxes are off