@@ -1963,6 +1963,46 @@ register_check_parameters(
 )
 
 register_check_parameters(
+    subgroup_os,
+    "vm_heartbeat",
+    _("Virtual machine heartbeat status"),
+     Dictionary(
+         optional_keys = False,
+         elements = [
+            ( "heartbeat_missing",
+               MonitoringState(
+                   title = _("No heartbeat"),
+                   help = _("Guest operating system may have stopped responding."),
+                   default_value = 2,
+               )
+            ),
+            ( "heartbeat_intermittend",
+               MonitoringState(
+                   title = _("Intermittent heartbeat"),
+                   help = _("May be due to high guest load."),
+                   default_value = 1,
+               )
+            ),
+             ( "heartbeat_no_tools",
+               MonitoringState(
+                   title = _("Heartbeat tools missing or not installed"),
+                   help = _("No VMWare Tools installed."),
+                   default_value = 1,
+               )
+            ),
+            ( "heartbeat_ok",
+               MonitoringState(
+                   title = _("Heartbeat OK"),
+                   help = _(" Guest operating system is responding normally."),
+                   default_value = 0,
+               )
+            ),
+         ]
+      ),
+    None,
+    "dict",
+)
+register_check_parameters(
     subgroup_applications,
     "esx_vsphere_objects",
     _("State of ESX hosts and virtual machines"),
