@@ -72,6 +72,7 @@
     * windows_tasks: New check to  monitor the Windows Task Scheduler
     * sensatronics_temp: New check for Sensatronic E4 Temperatur Sensor
     * akcp_sensor_drycontact: New Check for AKCP drycontact Sensors
+    * esx_vsphere_vm.heartbeat: Heartbeat status alert level now configurable
     * ps:  new configuration option: handle_count (windows only)
     * FIX: Windows agent: gracefully handle garbled logstate.txt
     * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch
